--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ annotated/
 check_correct_app.py
 detect_procedure_1.py
 detect_procedure_2.py
+cut_video.py
 archive/
 new_assets/
 *.csv
@@ -50,3 +51,5 @@ template_detection.py
 templates/
 procedure_templates/building/
 assets/
+
+image.png
